test/cases/compile_errors/character_literal_with_newline.zig
const foo = 'a
';

// error
// backend=stage2
// target=native
//
// :1:13: error: unterminated 'character literal'
